--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,27 +94,24 @@ kapt {
     correctErrorTypes true
 }
 
-hilt {
-    enableTransformForLocalTests = true
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'], exclude: [])
     implementation fileTree(dir: 'system_libs', include: ['*.aar', '*.jar'], exclude: [])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
     implementation 'com.google.android.material:material:1.3.0'
 
     // Widgets library
-    implementation 'com.github.LiteKite:Android-Widgets:0.0.6'
+    implementation 'com.github.litekite:android-widgets:0.0.7'
 
     // Activity & Fragments KTX
-    implementation "androidx.activity:activity-ktx:1.2.2"
-    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation "androidx.fragment:fragment-ktx:1.3.4"
 
     // Lifecycle KTX
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
